package com.carpark.model;

public enum ParkingStatus {
    OCCUPIED,
    AVAILABLE
}
