package com.carpark.model;

/**
 * An ENUM representing vehicle types.
 *
 * ENUMS provide type-safe constants. Unlike String constants:
 * - They are compile-time checked
 * - They can be used in switch expressions
 * - They have built-in methods like values(), valueOf(), ordinal()
 */
public enum VehicleType {
    CAR,
    MOTORBIKE
}
