@startuml
' Set a more modern theme
!theme mars

title Car Park Management System - Class Diagram

' Define classes, interfaces, and enums

interface Parkable {
    + {static} getParkingInfo(): String
    + {default} printRegistration(): void
    - printVin(): void
    + getRegistrationNumber(): String
    - generateVin(): String
}

abstract class Vehicle <<sealed>> {
    - registrationNumber: String
    - type: VehicleType
    + Vehicle(registrationNumber: String, type: VehicleType)
    + Vehicle(registrationNumber: String)
    + getRegistrationNumber(): String
    + getType(): VehicleType
    + {abstract} calculateFee(durationInHours: long): Money
}

class Car <<final>> {
    + Car(registrationNumber: String)
    + calculateFee(durationInHours: long): Money
    + toString(): String
}

class Motorbike <<final>> {
    + Motorbike(registrationNumber: String)
    + calculateFee(durationInHours: long): Money
}

class ParkingSlot {
    - slotNumber: int
    - vehicle: Vehicle
    - status: ParkingStatus
    - entryTime: LocalDateTime
    + ParkingSlot(slotNumber: int)
    + getSlotNumber(): int
    + getVehicle(): Vehicle
    + getStatus(): ParkingStatus
    + getEntryTime(): LocalDateTime
    + park(vehicle: Vehicle): void
    + unpark(): void
    + isAvailable(): boolean
}

class Ticket <<record>> {
    + registrationNumber: String
    + slotNumber: int
    + entryTime: LocalDateTime
    + exitTime: LocalDateTime
    + fee: Money
    + toString(): String
}

class Money <<immutable>> {
    - amount: BigDecimal
    + Money(amount: String)
    + Money(amount: double)
    + add(other: Money): Money
    + doubleValue(): double
    + toString(): String
}

class ParkingService {
    - slots: ParkingSlot[]
    - ticketHistory: List<Ticket>
    - parkedRegistrationNumbers: Set<String>
    + ParkingService(capacity: int)
    + park(vehicle: Vehicle): int
    + park(registrationNumber: String, type: VehicleType): int
    + unpark(slotNumber: int): Ticket
    + displayParkingStatus(): void
    + findVehicles(predicate: Predicate<Vehicle>): List<ParkingSlot>
    + printSlotDetails(slotNumbers: int...): void
}

class Main {
    + {instance} main(): void
    - parkVehicle(scanner: Scanner, parkingService: ParkingService): void
    - unparkVehicle(scanner: Scanner, parkingService: ParkingService): void
    - findVehicles(scanner: Scanner, parkingService: ParkingService): void
    - viewSpecificSlots(scanner: Scanner, parkingService: ParkingService): void
    - getVehicleTypeFromInput(input: String): String
}

enum VehicleType {
    CAR
    MOTORBIKE
}

enum ParkingStatus {
    OCCUPIED
    AVAILABLE
}

class ParkingFullException <<checked>> {
    + ParkingFullException(message: String)
}

' Define relationships

' Inheritance and interfaces
Vehicle ..|> Parkable : implements
Vehicle <|-- Car : extends
Vehicle <|-- Motorbike : extends

' Compositions and associations
ParkingSlot "1" *-- "0..1" Vehicle : contains
ParkingSlot --> ParkingStatus : uses

ParkingService "1" *-- "1..*" ParkingSlot : manages
ParkingService "1" o-- "0..*" Ticket : records
ParkingService ..> ParkingFullException : throws
ParkingService ..> IllegalArgumentException : throws

Ticket --> Money : contains

Main ..> ParkingService : uses
Main ..> Car : creates
Main ..> Motorbike : creates
Main ..> VehicleType : uses

Car --> VehicleType : uses
Motorbike --> VehicleType : uses
Vehicle --> VehicleType : uses

note right of Vehicle
  <b>Sealed Class (Java 17+)</b>
  Only Car and Motorbike
  can extend this class.

  <b>this() vs this.</b>
  - this() = constructor chaining
  - this. = instance member access
end note

note right of Car
  <b>Flexible Constructor Body</b>
  <b>(JEP 513 - Java 25)</b>
  Validates input BEFORE
  calling super()

  <b>super() vs super.</b>
  - super() = parent constructor
  - super. = parent member access
end note

note bottom of Main
  <b>Instance Main Method</b>
  <b>(JEP 512 - Java 25)</b>
  void main() instead of
  public static void main(String[] args)
end note

note right of ParkingService
  <b>Key Features:</b>
  - Method overloading (park)
  - Varargs (printSlotDetails)
  - Lambdas with Predicate
  - Arrays for slots
  - List/Set from Core API
end note

note bottom of Money
  <b>Custom Immutable Type</b>
  All fields are final,
  no setters, returns new
  instances from methods.
end note

note bottom of Ticket
  <b>Java Record</b>
  Immutable data carrier
  with auto-generated
  constructor, getters,
  equals, hashCode.
end note

@enduml
